fixed letter spacing

--- a/src/components/themeselector/themeselector.scss
+++ b/src/components/themeselector/themeselector.scss
@@ -7,6 +7,8 @@
 
 .label {
   margin-top: 13px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 .themetoggle {
